# rustack-launcher

./: .gitignore  Cargo.toml  README.md  config-test-docker.toml  config-test-podman.toml  config-test.toml  docker-compose-test.yaml  docker-compose.yml  test.yaml
src/: lib.rs
src/generators/: common.rs  compose.rs  config.rs  env.rs  execute_command.rs  mod.rs  prelude.rs  repository.rs  settings.rs
src/generators/tests/: config_tests.rs  env_tests.rs  execute_command_tests.rs  launch_tests.rs  mod.rs  repository_tests.rs
tests/: Dockerfile  command.rs  printforever.py
tests/podman/: docker-compose.yml
tests/testapp/: docker-compose.yml  entrypoint.sh  requirements.txt
tests/testapp/app/: settings.py
tests/testapp/crud/: admin.py  models.py
tests/testapp/crud/migrations/: 0001_initial.py
