[package]
name = "config-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde-envfile = "0.1.0"
serde_yaml = "0.9.34"
toml = "0.8.12"
