[package]
name = "rustack-launcher"
description = "A Rust library for developing application launchers. It uses a single TOML configuration file to automatically transform it into .env and YAML files. This library also allows you to easily switch between Docker Compose and Podman Compose."
repository = "https://github.com/j-p-d-e-v/rustack-launcher"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
categories = ["config"]
authors = ["JP Mateo <jpmateo022@gmail.com>"]
keywords = ["connfig-generator", "personal-project","study-rust","app-launcher","application launcher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.3"
serde = { version = "1.0.201", features = ["derive"] }
serde-envfile = "0.1.0"
serde_yaml = "0.9.34"
toml = "0.8.12"
